app_resources/k8s_cluster/config/api-gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  selector:
    matchLabels:
      app: apigateway
  replicas: 2
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: eszopregistry.azurecr.io/eszop-api-gateway:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eszop-api-gateway
spec:
  selector:
    app: apigateway
  ports:
    - port: 10000
      targetPort: 80
