app_resources/k8s_cluster/config/offers-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers
spec:
  selector:
    matchLabels:
      app: offers
  replicas: 2
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
        - name: offers
          image: eszopregistry.azurecr.io/eszop-offers-api:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: api
            - containerPort: 8080
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: eszop-offers-api
spec:
  selector:
    app: offers
  ports:
    - port: 80
      targetPort: 80
      name: api
    - port: 8080
      targetPort: 8080
      name: grpc
