app_resources/k8s_cluster/config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: eszop
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: eszop-api-gateway
              servicePort: 10000
            path: /
